crates/config/tests/snapshots/prefix_block_duplicate_across.snap
---
source: crates/config/tests/snapshots.rs
---
# prefix-block-duplicate-across

## Input

```mical
i. {
  k a
}
i. {
  k b
}

```

## JSON

```json
{
  "i.k": [
    "a",
    "b"
  ]
}
```

vim:ft=markdown
