crates/config/tests/snapshots/prefix_block_duplicate_keys.snap
---
source: crates/config/tests/snapshots.rs
---
# prefix-block-duplicate-keys

## Input

```mical
item. {
  tag a
  tag b
}

```

## JSON

```json
{
  "item.tag": [
    "a",
    "b"
  ]
}
```

vim:ft=markdown
