crates/config/tests/snapshots/prefix_block_empty.snap
---
source: crates/config/tests/snapshots.rs
---
# prefix-block-empty

## Input

```mical
section {
}

```

## JSON

```json
{}
```

vim:ft=markdown
