crates/config/tests/snapshots/prefix_block_empty_key.snap
---
source: crates/config/tests/snapshots.rs
---
# prefix-block-empty-key

## Input

```mical
s {
  "" value1
  '' value2
}

```

## JSON

```json
{
  "s": [
    "value1",
    "value2"
  ]
}
```

vim:ft=markdown
