crates/config/tests/snapshots/prefix_block_empty_with_eof.snap
---
source: crates/config/tests/snapshots.rs
---
# prefix-block-empty-with-eof

## Input

```mical
section {
}
```

## JSON

```json
{}
```

vim:ft=markdown
