crates/config/tests/snapshots/prefix_block_eof_no_newline.snap
---
source: crates/config/tests/snapshots.rs
---
# prefix-block-eof-no-newline

## Input

```mical
section {
  key value
}
```

## JSON

```json
{
  "sectionkey": "value"
}
```

vim:ft=markdown
