crates/config/tests/snapshots/prefix_block_hash_word.snap
---
source: crates/config/tests/snapshots.rs
---
# prefix-block-hash-word

## Input

```mical
s {
  #format off
  key value
}

```

## JSON

```json
{
  "skey": "value"
}
```

vim:ft=markdown
