crates/config/tests/snapshots/prefix_block_indented_opening.snap
---
source: crates/config/tests/snapshots.rs
---
# prefix-block-indented-opening

## Input

```mical
  section {
    key value
  }

```

## JSON

```json
{
  "sectionkey": "value"
}
```

vim:ft=markdown
