crates/config/tests/snapshots/prefix_block_missing_close_with_eof.snap
---
source: crates/config/tests/snapshots.rs
---
# prefix-block-missing-close-with-eof

## Input

```mical
section {
  key value
```

## Parser Error

```
21..21: missing closing '}' for prefix block

```

## JSON

```json
{
  "sectionkey": "value"
}
```

vim:ft=markdown
